package strategy_pattern.design_refactoring.behavior.interfaces;

/**
 * IFlyBehavior
 */
public interface IFlyBehavior {
    void fly();
}