package strategy_pattern.design_refactoring.behavior.interfaces;

/**
 * IQuackBehavior
 */
public interface IQuackBehavior {
    void quack();
}